# bonsai-native

./: .gitignore  README.md  bonsai_android.opam  bonsai_apple.opam  bonsai_native.opam  dune-project  dune-workspace.basement-flags
.github/workflows/: ci.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/assets/: bonsai_counter.json  bonsai_search.json  bonsai_todo.json
android/app/src/main/java/com/logseq/bonsaiandroid/: BonsaiAndroidNative.kt  MainActivity.kt
android/app/src/main/res/values/: strings.xml
apple/examples/: Info.demos.plist  Info.plist  README.md  counter.ml  dune  ios_app.ml  ios_demo_app.ml  mac_app.ml  navigation.ml  searchable_list.ml  todo.ml
apple/patches/: core_unix-ios.patch  ppxlib-ios-generated-sources.patch
apple/src/: bonsai_apple.ml  bonsai_apple.mli  dune
apple/swiftui/: BonsaiNativeSwiftUI.swift  BonsaiNativeSwiftUIMac.swift  README.md  bonsai_apple_swiftui.ml  bonsai_apple_swiftui.mli  bonsai_apple_swiftui_stubs.c  dune
apple/test/: bonsai_apple_test.ml  dune
apple/uikit/: README.md  bonsai_apple_uikit.ml  dune
docs/: android-native-build.md  apple-declarative-components.md  apple-native-build.md  architecture.md  questions.md
examples/: android_counter_entry.ml  android_demo_components.ml  bonsai_android_jni.c  counter_component.ml  counter_interaction_smoke.ml  dune  export_counter_json.ml  shared_surface_smoke.ml
jni/: bonsai_android_jni.c
native/: bonsai_native.ml  bonsai_native.mli  dune
native/test/: bonsai_native_app_driver_test.ml  dune
scripts/: bootstrap-android-jane.sh  bootstrap-ios-jane.sh  build-android-native.sh  build-swiftui-renderer.sh  check-android-jni-layout.sh  check-ci-workflow.sh  check-no-bonsai-core-deps.sh  generate-android-assets.sh  test-android-emulator.sh
src/: dune
test/: dune  web_demo_smoke.sh
web/demo/: README.md  dune  index.html  main.ml  package-lock.json  package.json  react_runtime.js  vite.config.js
