(library
 (name bonsai_apple_uikit)
 (public_name bonsai_apple.uikit)
 (enabled_if
  (or
   (= %{context_name} device.ios)
   (= %{context_name} simulator.ios)
   (= %{context_name} simulator-arm.ios)
   (= %{context_name} catalyst.ios)))
 (flags :standard -ccopt "-framework UIKit")
 (libraries
  bonsai_apple
  core
  camlkit-base.Foundation
  camlkit-base.CoreGraphics
  camlkit-gui.UIKit)
 (preprocess
  (pps ppx_jane)))
